# decompiler

./: .gitignore  Cargo.toml  example.txt  output.txt  plan.txt
decompiler/: Cargo.toml  PLAN_unsupported_insns.md  build.rs  unsupported_insns.txt
decompiler/scripts/: gen_callconv_tests.py  gen_callconv_tests.rb  ssa_to_dot.py  test.c
decompiler/src/: .dir-locals.el  api.rs  ast.rs  cfg.rs  elf.rs  lib.rs  lru_cache_dir.rs  mil.rs  pp.rs  ssa.rs  test_tool.rs  ty.rs  util.rs  x86_to_mil.rs  xform.rs
decompiler/src/api/: proto.rs
decompiler/src/ast/: builder.rs  edit.rs  pp.rs
decompiler/src/snapshots/: decompiler__ssa__tests__phi_read.snap  decompiler__tests__callconv_x86_64__simple.snap
decompiler/src/ssa/: cons.rs
decompiler/src/ty/: dwarf.rs  notation.rs
decompiler/src/util/: bisect.rs  disjoint_set.rs
decompiler/src/x86_to_mil/: callconv.rs
decompiler/src/xform/: mem.rs  tests.rs
decompiler/test-data/: x86_64_callconv  x86_64_callconv.c
decompiler/test-data/integration/: sample_matrix.c
decompiler/test-data/ty/: test_composite_type.c
decompiler/tests/: callconv.rs  generated_callconv.rs  test_tool.rs
decompiler/tests/snapshots/: test_tool__exe_capstone__main.snap  test_tool__exe_capstone__main.snap.new  test_tool__exe_composite_type__list_len.snap  test_tool__exe_composite_type__list_len.snap.new  test_tool__exe_matrix__sum_matrix.snap  test_tool__exe_matrix__sum_matrix.snap.new  test_tool__redis_server__ctl_lookup.snap  test_tool__redis_server__ctl_lookup.snap.new  test_tool__redis_server__geoArrayCreate.snap  test_tool__redis_server__geoArrayCreate.snap.new  test_tool__redis_server__listNext.snap  test_tool__redis_server__listNext.snap.new  test_tool__redis_server__listTypePush.snap  test_tool__redis_server__listTypePush.snap.new  test_tool__redis_server__processAnnotations.snap  test_tool__redis_server__processAnnotations.snap.new  test_tool__redis_server__redisConnectWithOptions.snap  test_tool__redis_server__redisConnectWithOptions.snap.new  test_tool__redis_server__redisReconnect.snap  test_tool__redis_server__redisReconnect.snap.new  test_tool__with_redis_server_ctl_lookup.snap  test_tool__with_sample_capstone.snap  test_tool__with_sample_matrix.snap  test_tool__x86_64_callconv__func000.snap  test_tool__x86_64_callconv__func000.snap.new  test_tool__x86_64_callconv__func001.snap  test_tool__x86_64_callconv__func001.snap.new  test_tool__x86_64_callconv__func002.snap  test_tool__x86_64_callconv__func002.snap.new  test_tool__x86_64_callconv__func003.snap  test_tool__x86_64_callconv__func003.snap.new  test_tool__x86_64_callconv__func004.snap  test_tool__x86_64_callconv__func004.snap.new  test_tool__x86_64_callconv__func005.snap  test_tool__x86_64_callconv__func005.snap.new  test_tool__x86_64_callconv__func006.snap  test_tool__x86_64_callconv__func006.snap.new  (+294 more)
decompiler/tests/utils/: dataflow.rs
decompiler_gui/: Cargo.toml
decompiler_gui/assets/: index.html  script.js  style.css
decompiler_gui/src/: main.rs
decompiler_gui/static/: index.html  script.js  style.css
decompiler_gui/templates/: base.html  function.html  function_list.html
decompiler_tester/: Cargo.toml  cli_ast.txt  plan.txt
decompiler_tester/src/: main.rs  search.rs
(+213 files in other folders)
