[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bimap = "0.6.3"
gimli = { version = "0.31.1", default-features = false, features = [
    "read-all",
] }
goblin = "0.8.2"
smallvec = "1.13.2"
thiserror = "2.0.9"
rayon = "1.10.0"
slotmap = "1.0.7"
enum-assoc = "1.2.4"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
features = ["decoder", "intel", "std", "instr_info"]

[dev-dependencies]
insta = { version = "1.40.0", default-features = false }
iced-x86 = { version = "1.21.0", features = ["encoder", "code_asm"] }
include_dir = "0.7.4"

[profile.dev.package]
gimli.opt-level = 3
slotmap.opt-level = 3
insta.opt-level = 3
