[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

[features]
trace = []
file_lock = []

[dependencies]
anyhow = "1.0.89"
bimap = "0.6.3"
gimli = { version = "0.31.1", default-features = false, features = [
    "read-all",
] }
goblin = "0.8.2"
smallvec = "1.13.2"
thiserror = "2.0.9"
rayon = "1.10.0"
slotmap = "1.0.7"
enum-assoc = "1.2.4"
arrayvec = "0.7.6"

# must be exactly 0.27.0, as following versions have MSRV 1.87.0, and we're on 1.86
facet = "=0.27.0"
facet-derive = "=0.27.0"
facet-reflect = "=0.27.0"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive", "rc"] }
rmp-serde = "1.3.0"
redb = "2.6.3"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
features = ["decoder", "intel", "std", "instr_info"]

[dev-dependencies]
insta = { version = "1.40.0", default-features = false }
iced-x86 = { version = "1.21.0", features = ["encoder", "code_asm"] }
include_dir = "0.7.4"

# list ourselves here, to add the 'trace' feature when we run `cargo test` by default
decompiler = { path = ".", features = ["trace"] }
test-log = { version = "0.2.18", features = ["trace"] }

[[test]]
name = "test_tool"
path = "tests/test_tool.rs"
required-features = ["trace"]
